Native/Test/KL/missing-function.out
missing-function.kl:2:3: error: function 'foo(String,Integer,Boolean)' not found
